--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <div class="portfolio-info">
               <div class="portfolio-title">
                 <h4>Meetvice</h4>
-                <a href="/" class="portfolio-link">
+                <a href="https://kazurw.github.io/rama.github.io/meetvice.html" target="_blank" class="portfolio-link">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="24"
@@ -177,7 +177,7 @@
             <div class="portfolio-info">
               <div class="portfolio-title">
                 <h4>Website Rumah Sakit Antrian | Primaya</h4>
-                <a href="/" class="portfolio-link">
+                <a href="https://primaya-antrian-develop.vercel.app/" class="portfolio-link">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="24"
@@ -207,14 +207,14 @@
           <div class="portfolio">
             <div class="portfolio-cover">
               <img
-                src="./images/portfolios/kici.png"
+                src="./images/vercel.png"
                 alt="Portfolio 3"
               />
             </div>
             <div class="portfolio-info">
               <div class="portfolio-title">
-                <h4>Kici</h4>
-                <a href="/" class="portfolio-link">
+                <h4>Github Project</h4>
+                <a href="https://github.com/kazuRW?tab=repositories" class="portfolio-link">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="24"
