--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <li><a href="#skills">Skill</a></li>
               <li><a href="#contact">Contact</a></li>
               <li>
-                <a href="/CVRamadani.pdf" target="_blank">
+                <a href="/CV_Ramadani.pdf" target="_blank">
                   <button class="btn">Resume</button>
                 </a>
               </li>
